[metadata]
name = charm-cinder
summary = Charm module for OpenStack Cinder
description-file =
    README.md
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/charm-guide/latest/
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[nosetests]
verbosity=1
with-coverage=1
cover-erase=1
cover-package=hooks
